fix padding and alignment for top hero section
Add middle section

Using flex make the middle section to display column below the header
by adding container around each placeholder and text. Fix alignment
using justify, padding margin and gap. This will get the middle section
as close to the desired outcome

Add the third section, and justify the text for the quote to center
. Set the child element Thor, in order to move it's alignment. This
will make the quote section as close to desired outcome

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    width: 100%;  /* Ensure it takes up the full width */
+    width: 100%;  
 }
 
 #header {
@@ -19,7 +19,7 @@ body {
     font-size: 24px;
     background-color: #1F2937;
     display: flex;
-    justify-content: space-around; /* Assuming you meant space-between */
+    justify-content: space-around; 
     align-items: center;
 }
 
@@ -34,8 +34,7 @@ body {
 .hero {
     display: flex;
     flex-direction: column;
-    /* Add a width here */
-    width: 30%; 
+    width: 35%; 
 
 }
 
@@ -46,9 +45,12 @@ h1 {
     margin-bottom: 0;
 }
 
+h2 {
+    text-align: center;
+    padding: 20px 0;
+}
+
 p {
-    display: flex;
-    flex-wrap: wrap;
     color: #E5E7EB;
     font-size: 18px;
 }
@@ -73,23 +75,91 @@ a {
     padding-left: 15%;
     gap: 80px;
     padding-top: 30px;
+    padding-bottom: 100px;
 }
 
 .image-placeholder {
     display: flex;
-    flex-basis: auto; /* Reset to default */
-    width: 40%;
-    height: 220px;
-    background-color: #6D747D;    
+    flex-basis: auto; 
+    width: 41%;
+    height: 230px;
+    margin-top:30px;
+    padding-bottom: 20px;
+    background-color: #6D747D;   
+}
+
+.images {
+    width: 160px;
+    height: 160px;
+    background-color: white;
+    border: 3px solid #3882F6;
+    border-radius: 8px;
+    margin-top: 8px;
+
 }
 
 button {
     background-color: #3882F6;
     color: #F9FAF8;
+    font-weight: 800;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-color: #3882F6;
-    
+    border: none;
+    border-radius: 6px;
+    padding: 6px 38px;    
+}
+
+
+.section-2 {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 50px;
+    margin-bottom: 120px;
+  
+}
+
+.all-images {
+    display: flex;
+    flex-direction: column;  
+    gap: 7px;  
+}
+
+.text {
+    width: 160px;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-3 {
+    border: 2px solid red;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: #E5E7EB;
+    padding: 60px 0;
+}
+
+#quote {
+
+    width: 740px;
+    font-size: 32px;
+    font-style: italic;
+    font-weight:lighter;
+    color: #1F2937;
+    margin-bottom: 0;
+}
+
+#thor {
+    width: 740px;
+    color: #1F2937;
+    font-weight: 800;
+    margin-top: 0;
+    margin-right: 60px;
+    text-align:end
 }
 
